2020-09-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_rescale): Move and rename.

2020-09-17  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Introduce 64th format for displaying values.

	* src/ttdebug.c (FORMAT_INTEGER, FORMAT_FLOAT, FORMAT_64TH): New
	enum values.
	(use_float): Global variable replaced by...
	(num_format): ... this one.  Update all caller.
	(print_number): New function.
	(display_changed_points, show_points_table): Use it.
	(RunIns) <'h'>: Update help screen.
	(RunIns) <'F'>: Replace toggling by cycling.
	(RunIns) <'V'>, <'G'>, <'C'>, <'S'>, <'K'>: Updated.

2020-09-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Permit reverse order of indices.

	Some compressed streams are really bad in rewinding.

	* src/ftbench.c (FOREACH): General loop in either direction.
	(test_*): Use it.
	(main): Parse forward and reverse index ranges.
	(usage): Document it.
	* man/ftbench.1: Ditto.

2020-09-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/*: Fix some -Wformat-signedness warnings.

2020-09-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_rescale_initial): Deal with low ascender.

2020-08-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (Process_Event): Rescale after resize.

2020-08-22  Werner Lemberg  <wl@gnu.org>

	ttdebug: Make it work again.

	* src/ttdebug.c (temqStr): New global array.
	(RunIns): Use it.

2020-08-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grevents.h (grKey): Recode function keys as 0xF1, etc.

	Use bash ANSI-C quoting $'\xF1' to pass them from the command line.

2020-08-21  Werner Lemberg  <wl@gnu.org>

	Improve help for command line option `-d'.

	* src/ftgrid.c, src/ftstring.c, src/ftview.c (usage): Depth value is
	optional.

	* man/ftgrid.1, man/ftstring.1, man/ftview.1: Updated.

2020-08-21  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Version): Correctly call `strbuf_init'.
